k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moviemonkey
  labels:
    app: moviemonkey
    environment: production
