k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviemonkey-service
  namespace: moviemonkey
  labels:
    app: moviemonkey
spec:
  type: NodePort
  selector:
    app: moviemonkey
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30000
      protocol: TCP
