k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviemonkey-ingress
  namespace: moviemonkey
  labels:
    app: moviemonkey
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: moviemonkey.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moviemonkey-service
                port:
                  number: 80
